# agentup_scopetest

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
src/scopecheck/: __init__.py  plugin.py
tests/: test_scopecheck.py
