[project]
name = "scopecheck"
version = "0.1.0"
description = "A plugin that provides Scopecheck functionality"
authors = [
    { name = "Luke Hinds", email = "your.email@example.com" }
]
dependencies = [
    "agentup>=0.1.0",
    "pluggy>=1.5.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."agentup.available_capabilities"]
scopecheck = "scopecheck.plugin:Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scopecheck"]

# This file is needed to transfer the image logo files to the AgentUp registry
[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[tool.pytest.ini_options]
asyncio_mode = "auto"